feat: fixed some style issues

--- a/src/posts/create-a-blog.mdx
+++ b/src/posts/create-a-blog.mdx
@@ -5,3 +5,13 @@ date: 10-01-2023
 tags: ["mdx", "blog", "tutorial"]
 author: Henri
 ---
+
+# This is an MDX Blogpost
+
+<Code lang="ts">
+```typescript
+export default function Hey() {
+  return "Hello, World"
+}
+```
+</Code>
